--- a/_pages/page-archive.html
+++ b/_pages/page-archive.html
@@ -1,11 +1,11 @@
----
-layout: archive
-title: "Page Archive"
-permalink: /page-archive/
-author_profile: false
----
+<!-- -&#45;&#45;-->
+<!--layout: archive-->
+<!--title: "Page Archive"-->
+<!--permalink: /page-archive/-->
+<!--author_profile: false-->
+<!-- -&#45;&#45;-->
 
-{% include base_path %}
-{% for post in site.pages %}
-  {% include archive-single.html %}
-{% endfor %}
+<!--{% include base_path %}-->
+<!--{% for post in site.pages %}-->
+<!--  {% include archive-single.html %}-->
+<!--{% endfor %}-->
