--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,9 +1,9 @@
----
-layout: archive
-title: "Talks and presentations"
-permalink: /talks/
-author_profile: true
----
+<!-- -&#45;&#45;-->
+<!--layout: archive-->
+<!--title: "Talks and presentations"-->
+<!--permalink: /talks/-->
+<!--author_profile: true-->
+<!-- -&#45;&#45;-->
 
 <!--{% if site.talkmap_link == true %}-->
 
